# mxcensus

./: .gitignore  CLAUDE.md  LICENSE  README.md  _quarto.yml  pyproject.toml
docs/: hf_bucket_readme.md
docs/denue/: CATEGORY_AUDIT.md  GEOMETRY_REPORT.md  INCONSISTENCY_REPORT.md  STEP_1_catalog_discovery.md  STEP_2_full_build_report.md  STEP_3_schema_grouping.md  STEP_4_loader_harmonization.md  STEP_5_6_wiring_docs_tests.md  VALIDATION_REPORT.md
notebooks/: 01_download.ipynb
scripts/: _build_common.py  build_data.py  build_denue.py  build_marco_geo.py  upload_hf.py  upload_release.py
src/mxcensus/: __init__.py  _cli.py  _resources.py  aggregate.py  crosstabs.py  denue.py  extended_personas.py  extended_viviendas.py  utils.py
src/mxcensus/_yaml/: constraints_personas.yaml  constraints_viviendas.yaml  denue_schema_map.yaml  variables_denue_g01.yaml  variables_denue_g02.yaml  variables_denue_g03.yaml  variables_denue_g04.yaml  variables_denue_g05.yaml  variables_denue_g06.yaml  variables_denue_g07.yaml  variables_denue_g08.yaml  variables_denue_g09.yaml  variables_denue_g10.yaml  variables_denue_g11.yaml  variables_iter.yaml  variables_personas.yaml  variables_resargebub.yaml  variables_viviendas.yaml
src/mxcensus/data/: __init__.py  _catalog.py  _denue_catalog.py  _download.py  _paths.py  _registry.py  registry.txt
tests/: test_denue.py
