[project]
name = "mxcensus"
version = "0.1.0"
description = "Mexico Census 2020 (CPV 2020) data loader and preprocessor"
readme = "README.md"
authors = [{ name = "Gonzalo Peraza", email = "ggperaza@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "chardet>=7.2.0",
    "geopandas>=1.1.2",
    "numpy>=2.0",
    "pandas>=3.0.0",
    "pandera>=0.29.0",
    "platformdirs>=4.0",
    "pooch>=1.8",
    "pyarrow>=18.0",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",          # pooch download progress bars (data/_registry.py)
]

[project.urls]
Homepage = "https://github.com/CentroFuturoCiudades/mxcensus"
Repository = "https://github.com/CentroFuturoCiudades/mxcensus"
Issues = "https://github.com/CentroFuturoCiudades/mxcensus/issues"

[project.scripts]
mxcensus = "mxcensus._cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pypdf>=5.0",        # build-only: parse 2010–2013 DENUE PDF data dictionaries
    "matplotlib>=3.8",   # build-only: schema-group heatmap in the inconsistency report
]
notebook = [
    "ipykernel>=6.29",   # run the notebooks/ and execute Quarto python cells
]

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true
